Add React pages Homepage.js, About.js, Error404.js, Lodging.js. Add routes in App.js. Components Header and Footer are injected for all pages and Homepage.js is complete.

--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -2,7 +2,7 @@
 
 body {
   box-sizing: border-box;
-  margin: 10px 50px;
+  margin: 0;
   font-family: "Montserrat", sans-serif;
   font-size: map-get($sizes, base);
 }
