--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,3 +1,5 @@
 @import "./reset";
 @import "./styleComponents/header";
 @import "./styleComponents/slogan";
+@import "./styleComponents/homeMain";
+@import "./styleComponents/footer";
