--- a/src/style/styleComponents/_header.scss
+++ b/src/style/styleComponents/_header.scss
@@ -1,13 +1,14 @@
 @import "../utils";
 
 header {
+  @include defaultMargin;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
   img {
     width: 100%;
-    height: 68px;
+    height: 44%;
     object-fit: cover;
   }
   .nav {
