--- a/src/style/styleComponents/_slogan.scss
+++ b/src/style/styleComponents/_slogan.scss
@@ -2,31 +2,23 @@
 
 .slogan {
   position: relative;
+  @include defaultMargin;
   z-index: 1;
-  width: 100%;
   height: 223px;
   border-radius: 25px;
-  background-image: url("../../assets/background-slogan.png");
-  background-repeat: no-repeat;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../../assets/background-slogan.png");
   background-size: cover;
   overflow: hidden;
   margin-top: 30px;
-  p {
+  h2 {
     position: relative;
+    top: 50%;
+    transform: translateY(-50%);
     z-index: 3;
-    line-height: 200px;
     text-align: center;
     color: map-get($colors, snow);
     font-size: map-get($sizes, xl);
     font-weight: map-get($weights, normal);
-  }
-  .slogan--opacity {
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.3);
   }
 }
