Creation component Dropdown. Add dropdowns in lodging page.

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,7 @@
 @import "./reset";
 @import "./styleComponents/header";
 @import "./styleComponents/slogan";
-@import "./styleComponents/homeMain";
+@import "./stylePages/homepage";
+@import "./stylePages/lodgingpage";
 @import "./styleComponents/footer";
+@import "./styleComponents/dropdown";
