--- a/src/style/styleComponents/_header.scss
+++ b/src/style/styleComponents/_header.scss
@@ -5,7 +5,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 20px 0px;
   img {
     width: 100%;
     height: 44%;
