--- a/src/style/stylePages/_homepage.scss
+++ b/src/style/stylePages/_homepage.scss
@@ -1,6 +1,6 @@
 @import "../utils";
 
-main {
+.homePage_main {
   @include mainMargin;
   background-color: map-get($colors, lightengrey);
   padding: 50px 50px 20px 50px;
@@ -10,6 +10,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     a.card {
       max-width: 340px;
       max-height: 340px;
