All pages Homepage, error404 & about are functionnal. For page Lodging, components lodgingHeader, lodgingAside & lodgingArticle are functionnal.

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,7 +1,8 @@
 @import "./reset";
 @import "./styleComponents/header";
-@import "./styleComponents/slogan";
-@import "./stylePages/homepage";
-@import "./stylePages/lodgingpage";
 @import "./styleComponents/footer";
 @import "./styleComponents/dropdown";
+@import "./stylePages/homepage";
+@import "./stylePages/lodgingpage";
+@import "./stylePages/about";
+@import "./stylePages/error404";
