--- a/src/style/styleComponents/_dropdown.scss
+++ b/src/style/styleComponents/_dropdown.scss
@@ -28,6 +28,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    z-index: 5;
     font-size: map-get($sizes, base);
     font-weight: map-get($weights, normal);
     color: map-get($colors, snow);
@@ -41,10 +43,13 @@
     }
   }
   .dropdown_content {
+    position: relative;
+    z-index: 4;
+    margin-top: -15px;
     height: 0px;
     background: map-get($colors, lightengrey);
     border-radius: 10px;
-    padding: 30px 20px;
+    padding: 35px 20px 20px 20px;
     color: map-get($colors, pumpkin);
     opacity: 0;
     transform-origin: top center;
@@ -59,6 +64,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    z-index: 5;
     font-size: map-get($sizes, base);
     font-weight: map-get($weights, normal);
     color: map-get($colors, snow);
@@ -72,14 +79,17 @@
     }
   }
   .dropdown_content {
+    position: relative;
+    z-index: 4;
+    margin-top: -15px;
     height: fit-content;
     background: map-get($colors, lightengrey);
     border-radius: 10px;
-    padding: 30px 20px;
+    padding: 35px 20px 20px 20px;
     color: map-get($colors, pumpkin);
     margin-bottom: 30px;
     font-size: map-get($sizes, base);
-    line-height: 25px;
+    line-height: map-get($sizes, lineheight);
     font-weight: map-get($weights, slim);
 
     transform-origin: top center;
