--- a/src/style/styleComponents/_header.scss
+++ b/src/style/styleComponents/_header.scss
@@ -1,4 +1,5 @@
 @import "../utils";
+@import "./navigation";
 
 header {
   @include defaultMargin;
@@ -10,24 +11,5 @@ header {
     width: 100%;
     height: 44%;
     object-fit: cover;
-  }
-  .nav {
-    width: 60%;
-    display: flex;
-    justify-content: flex-end;
-    gap: 50px;
-  }
-  .nav a {
-    color: map-get($colors, pumpkin);
-    font-size: map-get($sizes, m);
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-  .nav_item--inactive {
-    text-decoration: none;
-  }
-  .nav_item--active {
-    text-decoration: underline;
   }
 }
