--- a/src/style/styleComponents/_slogan.scss
+++ b/src/style/styleComponents/_slogan.scss
@@ -1,6 +1,6 @@
 @import "../utils";
 
-.slogan {
+.slogan--sea {
   position: relative;
   @include defaultMargin;
   z-index: 1;
@@ -8,6 +8,29 @@
   border-radius: 25px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url("../../assets/background-slogan.png");
+  background-size: cover;
+  overflow: hidden;
+  margin-top: 30px;
+  h2 {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 3;
+    text-align: center;
+    color: map-get($colors, snow);
+    font-size: map-get($sizes, xl);
+    font-weight: map-get($weights, normal);
+  }
+}
+
+.slogan--mountain {
+  position: relative;
+  @include defaultMargin;
+  z-index: 1;
+  height: 223px;
+  border-radius: 25px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../../assets/background-slogan-mountains.png");
   background-size: cover;
   overflow: hidden;
   margin-top: 30px;
