--- a/src/style/stylePages/_homepage.scss
+++ b/src/style/stylePages/_homepage.scss
@@ -1,58 +1,10 @@
 @import "../utils";
+@import "../styleComponents/slogan";
+@import "../styleComponents/lodgingList";
 
-.homePage_main {
+.homepage_main {
   @include mainMargin;
   background-color: map-get($colors, lightengrey);
   padding: 50px 50px 20px 50px;
   border-radius: 25px;
-  ul {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    a.card {
-      max-width: 340px;
-      max-height: 340px;
-      margin-bottom: 30px;
-      position: relative;
-      z-index: 1;
-      border-radius: 10px;
-      background: map-get($colors, gradient);
-      overflow: hidden;
-      picture {
-        display: block;
-        width: 100%;
-        height: 340px;
-        &:after {
-          position: absolute;
-          content: "";
-          width: 100%;
-          height: 340px;
-          top: 0;
-          left: 0;
-          background: map-get($colors, gradient);
-        }
-      }
-      img {
-        width: 100%;
-        height: 340px;
-        object-fit: cover;
-      }
-      h3 {
-        position: absolute;
-        width: 80%;
-        height: 52px;
-        bottom: 5px;
-        left: 20px;
-        z-index: 3;
-        color: map-get($colors, snow);
-        font-size: map-get($sizes, base);
-        font-weight: map-get($weights, normal);
-      }
-      &:hover {
-        box-shadow: 3px 4px 5px map-get($colors, mouse);
-      }
-    }
-  }
 }
