Add responsive design mobile and correction html disposition in page lodging (section>header & section>aside) for flexbox optimization

--- a/src/style/_utils.scss
+++ b/src/style/_utils.scss
@@ -40,6 +40,26 @@ $weights: (
   margin: 0px 100px;
 }
 
+@mixin defaultMarginMobile {
+  margin: 0px 20px;
+}
+
 @mixin mainMargin {
   margin: 30px 100px;
+}
+
+@mixin mainMarginMobile {
+  margin: 30px 20px;
+}
+
+@mixin responsiveMobile {
+  @media screen and (max-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin responsiveMobileXS {
+  @media screen and (max-width: 340px) {
+    @content;
+  }
 }
