--- a/src/style/styleComponents/_lodgingArticle.scss
+++ b/src/style/styleComponents/_lodgingArticle.scss
@@ -3,7 +3,13 @@
 .lodgingInfos_articleLodging {
   display: flex;
   justify-content: space-between;
+  @include responsiveMobile {
+    flex-direction: column;
+  }
   .articleLodging_card {
     width: 47%;
+    @include responsiveMobile {
+      width: 100%;
+    }
   }
 }
