--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -17,3 +17,13 @@ h3 {
 a {
   text-decoration: none;
 }
+
+.contentPage {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  main {
+    flex-grow: 1;
+  }
+}
