--- a/src/style/styleComponents/_lodgingGallery.scss
+++ b/src/style/styleComponents/_lodgingGallery.scss
@@ -9,6 +9,9 @@
     width: 100%;
     height: 415px;
     object-fit: cover;
+    @include responsiveMobile {
+      height: 255px;
+    }
   }
   .containerGallery_navButtons--disabled {
     position: absolute;
