--- a/src/style/styleComponents/_lodgingList.scss
+++ b/src/style/styleComponents/_lodgingList.scss
@@ -6,6 +6,9 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  @include responsiveMobile {
+    flex-direction: column;
+  }
   .lodgingList_card {
     max-width: 340px;
     max-height: 340px;
@@ -15,6 +18,12 @@
     border-radius: 10px;
     background: map-get($colors, gradient);
     overflow: hidden;
+    @include responsiveMobile {
+      width: 100%;
+      max-width: inherit;
+      height: 255px;
+      max-height: inherit;
+    }
     picture {
       display: block;
       width: 100%;
@@ -44,6 +53,11 @@
       color: map-get($colors, snow);
       font-size: map-get($sizes, base);
       font-weight: map-get($weights, normal);
+      @include responsiveMobileXS {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
     }
     &:hover {
       box-shadow: 3px 4px 5px map-get($colors, mouse);
