--- a/src/style/styleComponents/_slogan.scss
+++ b/src/style/styleComponents/_slogan.scss
@@ -11,6 +11,10 @@
   background-size: cover;
   overflow: hidden;
   margin-top: 30px;
+  @include responsiveMobile {
+    @include defaultMarginMobile;
+    height: 111px;
+  }
   h2 {
     position: relative;
     top: 50%;
@@ -20,6 +24,14 @@
     color: map-get($colors, snow);
     font-size: map-get($sizes, xl);
     font-weight: map-get($weights, normal);
+    @include responsiveMobile {
+      text-align: left;
+      padding: 20px;
+      font-size: map-get($sizes, m);
+      span {
+        display: block;
+      }
+    }
   }
 }
 
@@ -34,6 +46,10 @@
   background-size: cover;
   overflow: hidden;
   margin-top: 30px;
+  @include responsiveMobile {
+    @include defaultMarginMobile;
+    height: 223px;
+  }
   h2 {
     position: relative;
     top: 50%;
@@ -43,5 +59,10 @@
     color: map-get($colors, snow);
     font-size: map-get($sizes, xl);
     font-weight: map-get($weights, normal);
+    @include responsiveMobile {
+      text-align: left;
+      padding: 20px;
+      font-size: map-get($sizes, m);
+    }
   }
 }
