--- a/src/style/stylePages/_homepage.scss
+++ b/src/style/stylePages/_homepage.scss
@@ -7,4 +7,9 @@
   background-color: map-get($colors, lightengrey);
   padding: 50px 50px 20px 50px;
   border-radius: 25px;
+  @include responsiveMobile {
+    @include mainMarginMobile;
+    padding: 0px;
+    background-color: inherit;
+  }
 }
