--- a/src/style/stylePages/_lodgingpage.scss
+++ b/src/style/stylePages/_lodgingpage.scss
@@ -6,64 +6,28 @@
 
 .lodgingPage_main {
   @include mainMargin;
+  @include responsiveMobile {
+    @include defaultMarginMobile;
+  }
   .dropdown--deployed .dropdown_content {
     min-height: 220px;
+    @include responsiveMobile {
+      min-height: inherit;
+    }
   }
 }
 
-@keyframes animGallery {
-  from {
-    transform: translateX(-100%);
-  }
-  to {
-    transform: translateX(0%);
-  }
-}
-
-.lodgingGallery_containerGallery {
-  position: relative;
-  z-index: 1;
-  border-radius: 25px;
-  overflow: hidden;
-  .containerGallery_image {
-    width: 100%;
-    height: 415px;
-    object-fit: cover;
-  }
-  .containerGallery_navButtons--disabled {
-    position: absolute;
-    z-index: 0;
-    opacity: 0;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  .containerGallery_navButtons {
-    position: absolute;
-    z-index: 50;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    picture {
-      display: block;
-      cursor: pointer;
-      width: 4%;
-      padding: 10px;
-      text-align: center;
-    }
-    img {
-      width: 100%;
-      height: 50px;
-      object-fit: contain;
-    }
-    .navButtons--left {
-      transform: rotate(180deg);
-    }
+.lodgingInfos_general {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 120px;
+  margin: 20px 0;
+  @include responsiveMobile {
+    flex-direction: column;
+    height: inherit;
+    align-items: flex-start;
+    margin-top: 5px;
+    margin-bottom: 15px;
   }
 }
