--- a/src/style/styleComponents/_lodgingGallery.scss
+++ b/src/style/styleComponents/_lodgingGallery.scss
@@ -5,6 +5,10 @@
   z-index: 1;
   border-radius: 25px;
   overflow: hidden;
+  height: 415px;
+  @include responsiveMobile {
+    height: 255px;
+  }
   .containerGallery_image {
     width: 100%;
     height: 415px;
