--- a/src/style/styleComponents/_footer.scss
+++ b/src/style/styleComponents/_footer.scss
@@ -2,14 +2,21 @@
 
 footer {
   background-color: map-get($colors, night);
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 124px;
-  padding: 65px 0px 20px 0px;
+  height: 169px;
+  padding: 20px 0px 20px 0px;
   color: map-get($colors, snow);
-  img {
+  .footer_logo {
     width: 122px;
     height: 39px;
+    background-image: url("../../assets/logo-kasa-white.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
   }
   p {
     margin-top: 45px;
