--- a/src/style/styleComponents/_header.scss
+++ b/src/style/styleComponents/_header.scss
@@ -11,16 +11,18 @@ header {
     @include defaultMarginMobile;
   }
 
-  img {
-    width: 100%;
-    height: 44%;
-    object-fit: cover;
+  .header_logo {
+    width: 30%;
+    height: 68px;
+    background-image: url("../../assets/logo-kasa.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center left;
     @include responsiveMobile {
-      max-height: 47px;
-      object-fit: contain;
+      height: 47px;
     }
     @include responsiveMobileXS {
-      max-height: 35px;
+      height: 35px;
     }
   }
 }
