--- a/src/style/styleComponents/_footer.scss
+++ b/src/style/styleComponents/_footer.scss
@@ -2,21 +2,15 @@
 
 footer {
   background-color: map-get($colors, night);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   width: 100%;
-  height: 169px;
-  padding: 20px 0px 20px 0px;
+  height: 124px;
+  padding: 65px 0px 20px 0px;
   color: map-get($colors, snow);
-  .footer_logo {
+
+  img {
     width: 122px;
     height: 39px;
-    background-image: url("../../assets/logo-kasa-white.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
   }
   p {
     margin-top: 45px;
