--- a/src/style/styleComponents/_header.scss
+++ b/src/style/styleComponents/_header.scss
@@ -11,18 +11,16 @@ header {
     @include defaultMarginMobile;
   }
 
-  .header_logo {
-    width: 30%;
-    height: 68px;
-    background-image: url("../../assets/logo-kasa.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center left;
+  img {
+    width: 100%;
+    height: 44%;
+    object-fit: cover;
     @include responsiveMobile {
-      height: 47px;
+      max-height: 47px;
+      object-fit: contain;
     }
     @include responsiveMobileXS {
-      height: 35px;
+      max-height: 35px;
     }
   }
 }
