Corrections : Add missing counter for lodging gallery & factoring for dropdowns in page About

--- a/src/style/styleComponents/_dropdown.scss
+++ b/src/style/styleComponents/_dropdown.scss
@@ -18,6 +18,7 @@
   }
 }
 
+// Style when dropdown is undeployed
 .dropdown {
   width: 100%;
   h3 {
@@ -68,6 +69,7 @@
   }
 }
 
+// Style when dropdown is deployed
 .dropdown--deployed {
   width: 100%;
   h3 {
