Corrections : Change structure of files and folders project and add comments

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,8 +1,15 @@
 @import "./reset";
-@import "./styleComponents/header";
-@import "./styleComponents/footer";
-@import "./styleComponents/dropdown";
-@import "./stylePages/homepage";
-@import "./stylePages/lodgingpage";
-@import "./stylePages/about";
-@import "./stylePages/error404";
+@import "../components/header/header";
+@import "../components/navigation/navigation";
+@import "../components/footer/footer";
+@import "../components/dropdown/dropdown";
+@import "../components/slogan/slogan";
+@import "../components/lodgingList/lodgingList";
+@import "../components/lodgingGallery/lodgingGallery";
+@import "../components/lodgingHeader/lodgingHeader";
+@import "../components/lodgingArticle/lodgingArticle";
+@import "../components/lodgingAside/lodgingAside";
+@import "../pages/HomePage/homepage";
+@import "../pages/LodgingPage/lodgingpage";
+@import "../pages/AboutPage/about";
+@import "../pages/Error404Page/error404";
